packages/vs-code-extension/bundled-tools/core/language/generated/ESPACEParser.js
import * as antlr from "antlr4ng";
export class ESPACEParser extends antlr.Parser {
    static SEMICOLON = 1;
    static ARROW = 2;
    static CONDITION_ARROW = 3;
    static LBRACE = 4;
    static RBRACE = 5;
    static LPAREN = 6;
    static RPAREN = 7;
    static EQUALS = 8;
    static COMMA = 9;
    static EXPERIMENT = 10;
    static SPACE = 11;
    static OF = 12;
    static STRATEGY = 13;
    static PARAM = 14;
    static ENUM = 15;
    static RANGE = 16;
    static CONFIGURE = 17;
    static TASK = 18;
    static CONTROL = 19;
    static CONDITION = 20;
    static DEFINE = 21;
    static DATA = 22;
    static START = 23;
    static END = 24;
    static BOOLEAN = 25;
    static IDENTIFIER = 26;
    static STRING = 27;
    static NUMBER = 28;
    static WS = 29;
    static COMMENT = 30;
    static RULE_program = 0;
    static RULE_experimentDeclaration = 1;
    static RULE_experimentHeader = 2;
    static RULE_experimentBody = 3;
    static RULE_experimentContent = 4;
    static RULE_spaceDeclaration = 5;
    static RULE_spaceHeader = 6;
    static RULE_spaceBody = 7;
    static RULE_spaceContent = 8;
    static RULE_strategyStatement = 9;
    static RULE_paramDefinition = 10;
    static RULE_paramValue = 11;
    static RULE_enumFunction = 12;
    static RULE_rangeFunction = 13;
    static RULE_taskConfiguration = 14;
    static RULE_taskConfigurationHeader = 15;
    static RULE_taskConfigurationBody = 16;
    static RULE_configurationContent = 17;
    static RULE_paramAssignment = 18;
    static RULE_controlBlock = 19;
    static RULE_controlBody = 20;
    static RULE_controlContent = 21;
    static RULE_simpleTransition = 22;
    static RULE_conditionalTransition = 23;
    static RULE_conditionalTransitionHeader = 24;
    static RULE_conditionalTransitionBody = 25;
    static RULE_condition = 26;
    static RULE_controlChainElement = 27;
    static RULE_dataDefinition = 28;
    static RULE_workflowNameRead = 29;
    static RULE_taskNameRead = 30;
    static RULE_spaceNameRead = 31;
    static RULE_expression = 32;
    static literalNames = [
        null, "';'", "'->'", "'-?>'", "'{'", "'}'", "'('", "')'", "'='",
        "','", "'experiment'", "'space'", "'of'", "'strategy'", "'param'",
        "'enum'", "'range'", "'configure'", "'task'", "'control'", "'condition'",
        "'define'", "'data'", "'start'", "'end'"
    ];
    static symbolicNames = [
        null, "SEMICOLON", "ARROW", "CONDITION_ARROW", "LBRACE", "RBRACE",
        "LPAREN", "RPAREN", "EQUALS", "COMMA", "EXPERIMENT", "SPACE", "OF",
        "STRATEGY", "PARAM", "ENUM", "RANGE", "CONFIGURE", "TASK", "CONTROL",
        "CONDITION", "DEFINE", "DATA", "START", "END", "BOOLEAN", "IDENTIFIER",
        "STRING", "NUMBER", "WS", "COMMENT"
    ];
    static ruleNames = [
        "program", "experimentDeclaration", "experimentHeader", "experimentBody",
        "experimentContent", "spaceDeclaration", "spaceHeader", "spaceBody",
        "spaceContent", "strategyStatement", "paramDefinition", "paramValue",
        "enumFunction", "rangeFunction", "taskConfiguration", "taskConfigurationHeader",
        "taskConfigurationBody", "configurationContent", "paramAssignment",
        "controlBlock", "controlBody", "controlContent", "simpleTransition",
        "conditionalTransition", "conditionalTransitionHeader", "conditionalTransitionBody",
        "condition", "controlChainElement", "dataDefinition", "workflowNameRead",
        "taskNameRead", "spaceNameRead", "expression",
    ];
    get grammarFileName() { return "ESPACE.g4"; }
    get literalNames() { return ESPACEParser.literalNames; }
    get symbolicNames() { return ESPACEParser.symbolicNames; }
    get ruleNames() { return ESPACEParser.ruleNames; }
    get serializedATN() { return ESPACEParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new antlr.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, ESPACEParser._ATN, ESPACEParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    program() {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, ESPACEParser.RULE_program);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 66;
                this.experimentDeclaration();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    experimentDeclaration() {
        let localContext = new ExperimentDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 2, ESPACEParser.RULE_experimentDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 68;
                this.experimentHeader();
                this.state = 69;
                this.experimentBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    experimentHeader() {
        let localContext = new ExperimentHeaderContext(this.context, this.state);
        this.enterRule(localContext, 4, ESPACEParser.RULE_experimentHeader);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 71;
                this.match(ESPACEParser.EXPERIMENT);
                this.state = 72;
                this.match(ESPACEParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    experimentBody() {
        let localContext = new ExperimentBodyContext(this.context, this.state);
        this.enterRule(localContext, 6, ESPACEParser.RULE_experimentBody);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 74;
                this.match(ESPACEParser.LBRACE);
                this.state = 78;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2623488) !== 0)) {
                    {
                        {
                            this.state = 75;
                            this.experimentContent();
                        }
                    }
                    this.state = 80;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 81;
                this.match(ESPACEParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    experimentContent() {
        let localContext = new ExperimentContentContext(this.context, this.state);
        this.enterRule(localContext, 8, ESPACEParser.RULE_experimentContent);
        try {
            this.state = 86;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
                case ESPACEParser.SPACE:
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 83;
                        this.spaceDeclaration();
                    }
                    break;
                case ESPACEParser.CONTROL:
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 84;
                        this.controlBlock();
                    }
                    break;
                case ESPACEParser.DEFINE:
                    this.enterOuterAlt(localContext, 3);
                    {
                        this.state = 85;
                        this.dataDefinition();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    spaceDeclaration() {
        let localContext = new SpaceDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 10, ESPACEParser.RULE_spaceDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 88;
                this.spaceHeader();
                this.state = 89;
                this.spaceBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    spaceHeader() {
        let localContext = new SpaceHeaderContext(this.context, this.state);
        this.enterRule(localContext, 12, ESPACEParser.RULE_spaceHeader);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 91;
                this.match(ESPACEParser.SPACE);
                this.state = 92;
                this.match(ESPACEParser.IDENTIFIER);
                this.state = 93;
                this.match(ESPACEParser.OF);
                this.state = 94;
                this.workflowNameRead();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    spaceBody() {
        let localContext = new SpaceBodyContext(this.context, this.state);
        this.enterRule(localContext, 14, ESPACEParser.RULE_spaceBody);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 96;
                this.match(ESPACEParser.LBRACE);
                this.state = 100;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2252800) !== 0)) {
                    {
                        {
                            this.state = 97;
                            this.spaceContent();
                        }
                    }
                    this.state = 102;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 103;
                this.match(ESPACEParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    spaceContent() {
        let localContext = new SpaceContentContext(this.context, this.state);
        this.enterRule(localContext, 16, ESPACEParser.RULE_spaceContent);
        try {
            this.state = 109;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
                case ESPACEParser.STRATEGY:
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 105;
                        this.strategyStatement();
                    }
                    break;
                case ESPACEParser.PARAM:
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 106;
                        this.paramDefinition();
                    }
                    break;
                case ESPACEParser.CONFIGURE:
                    this.enterOuterAlt(localContext, 3);
                    {
                        this.state = 107;
                        this.taskConfiguration();
                    }
                    break;
                case ESPACEParser.DEFINE:
                    this.enterOuterAlt(localContext, 4);
                    {
                        this.state = 108;
                        this.dataDefinition();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    strategyStatement() {
        let localContext = new StrategyStatementContext(this.context, this.state);
        this.enterRule(localContext, 18, ESPACEParser.RULE_strategyStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 111;
                this.match(ESPACEParser.STRATEGY);
                this.state = 112;
                this.match(ESPACEParser.IDENTIFIER);
                this.state = 113;
                this.match(ESPACEParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    paramDefinition() {
        let localContext = new ParamDefinitionContext(this.context, this.state);
        this.enterRule(localContext, 20, ESPACEParser.RULE_paramDefinition);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 115;
                this.match(ESPACEParser.PARAM);
                this.state = 116;
                this.match(ESPACEParser.IDENTIFIER);
                this.state = 117;
                this.match(ESPACEParser.EQUALS);
                this.state = 118;
                this.paramValue();
                this.state = 119;
                this.match(ESPACEParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    paramValue() {
        let localContext = new ParamValueContext(this.context, this.state);
        this.enterRule(localContext, 22, ESPACEParser.RULE_paramValue);
        try {
            this.state = 124;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
                case ESPACEParser.ENUM:
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 121;
                        this.enumFunction();
                    }
                    break;
                case ESPACEParser.RANGE:
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 122;
                        this.rangeFunction();
                    }
                    break;
                case ESPACEParser.BOOLEAN:
                case ESPACEParser.STRING:
                case ESPACEParser.NUMBER:
                    this.enterOuterAlt(localContext, 3);
                    {
                        this.state = 123;
                        this.expression();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    enumFunction() {
        let localContext = new EnumFunctionContext(this.context, this.state);
        this.enterRule(localContext, 24, ESPACEParser.RULE_enumFunction);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 126;
                this.match(ESPACEParser.ENUM);
                this.state = 127;
                this.match(ESPACEParser.LPAREN);
                this.state = 128;
                this.expression();
                this.state = 133;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 9) {
                    {
                        {
                            this.state = 129;
                            this.match(ESPACEParser.COMMA);
                            this.state = 130;
                            this.expression();
                        }
                    }
                    this.state = 135;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 136;
                this.match(ESPACEParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    rangeFunction() {
        let localContext = new RangeFunctionContext(this.context, this.state);
        this.enterRule(localContext, 26, ESPACEParser.RULE_rangeFunction);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 138;
                this.match(ESPACEParser.RANGE);
                this.state = 139;
                this.match(ESPACEParser.LPAREN);
                this.state = 140;
                this.match(ESPACEParser.NUMBER);
                this.state = 141;
                this.match(ESPACEParser.COMMA);
                this.state = 142;
                this.match(ESPACEParser.NUMBER);
                this.state = 143;
                this.match(ESPACEParser.COMMA);
                this.state = 144;
                this.match(ESPACEParser.NUMBER);
                this.state = 145;
                this.match(ESPACEParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    taskConfiguration() {
        let localContext = new TaskConfigurationContext(this.context, this.state);
        this.enterRule(localContext, 28, ESPACEParser.RULE_taskConfiguration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 147;
                this.taskConfigurationHeader();
                this.state = 148;
                this.taskConfigurationBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    taskConfigurationHeader() {
        let localContext = new TaskConfigurationHeaderContext(this.context, this.state);
        this.enterRule(localContext, 30, ESPACEParser.RULE_taskConfigurationHeader);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 150;
                this.match(ESPACEParser.CONFIGURE);
                this.state = 151;
                this.match(ESPACEParser.TASK);
                this.state = 152;
                this.taskNameRead();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    taskConfigurationBody() {
        let localContext = new TaskConfigurationBodyContext(this.context, this.state);
        this.enterRule(localContext, 32, ESPACEParser.RULE_taskConfigurationBody);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 154;
                this.match(ESPACEParser.LBRACE);
                this.state = 158;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 14) {
                    {
                        {
                            this.state = 155;
                            this.configurationContent();
                        }
                    }
                    this.state = 160;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 161;
                this.match(ESPACEParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    configurationContent() {
        let localContext = new ConfigurationContentContext(this.context, this.state);
        this.enterRule(localContext, 34, ESPACEParser.RULE_configurationContent);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 163;
                this.paramAssignment();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    paramAssignment() {
        let localContext = new ParamAssignmentContext(this.context, this.state);
        this.enterRule(localContext, 36, ESPACEParser.RULE_paramAssignment);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 165;
                this.match(ESPACEParser.PARAM);
                this.state = 166;
                this.match(ESPACEParser.IDENTIFIER);
                this.state = 167;
                this.match(ESPACEParser.EQUALS);
                this.state = 168;
                this.paramValue();
                this.state = 169;
                this.match(ESPACEParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    controlBlock() {
        let localContext = new ControlBlockContext(this.context, this.state);
        this.enterRule(localContext, 38, ESPACEParser.RULE_controlBlock);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 171;
                this.match(ESPACEParser.CONTROL);
                this.state = 172;
                this.controlBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    controlBody() {
        let localContext = new ControlBodyContext(this.context, this.state);
        this.enterRule(localContext, 40, ESPACEParser.RULE_controlBody);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 174;
                this.match(ESPACEParser.LBRACE);
                this.state = 178;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 92274688) !== 0)) {
                    {
                        {
                            this.state = 175;
                            this.controlContent();
                        }
                    }
                    this.state = 180;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 181;
                this.match(ESPACEParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    controlContent() {
        let localContext = new ControlContentContext(this.context, this.state);
        this.enterRule(localContext, 42, ESPACEParser.RULE_controlContent);
        try {
            this.state = 185;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 8, this.context)) {
                case 1:
                    this.enterOuterAlt(localContext, 1);
                    {
                        this.state = 183;
                        this.simpleTransition();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localContext, 2);
                    {
                        this.state = 184;
                        this.conditionalTransition();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    simpleTransition() {
        let localContext = new SimpleTransitionContext(this.context, this.state);
        this.enterRule(localContext, 44, ESPACEParser.RULE_simpleTransition);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 187;
                this.controlChainElement();
                this.state = 190;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                do {
                    {
                        {
                            this.state = 188;
                            this.match(ESPACEParser.ARROW);
                            this.state = 189;
                            this.controlChainElement();
                        }
                    }
                    this.state = 192;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                } while (_la === 2);
                this.state = 194;
                this.match(ESPACEParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    conditionalTransition() {
        let localContext = new ConditionalTransitionContext(this.context, this.state);
        this.enterRule(localContext, 46, ESPACEParser.RULE_conditionalTransition);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 196;
                this.conditionalTransitionHeader();
                this.state = 197;
                this.conditionalTransitionBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    conditionalTransitionHeader() {
        let localContext = new ConditionalTransitionHeaderContext(this.context, this.state);
        this.enterRule(localContext, 48, ESPACEParser.RULE_conditionalTransitionHeader);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 199;
                this.controlChainElement();
                this.state = 200;
                this.match(ESPACEParser.CONDITION_ARROW);
                this.state = 201;
                this.controlChainElement();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    conditionalTransitionBody() {
        let localContext = new ConditionalTransitionBodyContext(this.context, this.state);
        this.enterRule(localContext, 50, ESPACEParser.RULE_conditionalTransitionBody);
        let _la;
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 203;
                this.match(ESPACEParser.LBRACE);
                this.state = 207;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 20) {
                    {
                        {
                            this.state = 204;
                            this.condition();
                        }
                    }
                    this.state = 209;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 210;
                this.match(ESPACEParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    condition() {
        let localContext = new ConditionContext(this.context, this.state);
        this.enterRule(localContext, 52, ESPACEParser.RULE_condition);
        try {
            this.enterOuterAlt(localContext, 1);
            {
                this.state = 212;
                this.match(ESPACEParser.CONDITION);
                this.state = 213;
                this.match(ESPACEParser.STRING);
                this.state = 214;
                this.match(ESPACEParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    controlChainElement() {
        let localContext = new ControlChainElementContext(this.context, this.state);
